deployments/k8s/infrastructure/overlays/prod/gateway/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  tls:
    - hosts:
        - api.discky.com
      secretName: gateway-tls
  rules:
    - host: api.discky.com
      http:
        paths:
          - path: /graph
            pathType: Prefix
            backend:
              service:
                name: apollo-router
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
